welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:14: error: ')' expected but ';' found.
			setPos(getX();getY()+1):
                                     ^ZigZag:14: error: ';' expected but ')' found.
			setPos(getX();getY()+1):
                                              ^